spacing/visual issues solved

--- a/public/styles/Checkout.module.css
+++ b/public/styles/Checkout.module.css
@@ -62,3 +62,11 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  .selectorSpacing {
+    padding-top: 5px;
+    padding-bottom: 10px;
+  }
+.buttonSpacing {
+  padding-top: 20px;
+}
